--- a/MVCVeterinaria/appsettings.json
+++ b/MVCVeterinaria/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "KeyDB": "Server=.\\SQLExpress;Database=VeterinariaDB;Trusted_Connection=True;"
+    "KeyDB": "Server=DESKTOP-FN81UKC\\SQLEXPRESS;Database=VeterinariaDB;Trusted_Connection=True;"
   }
 }
 
